--- a/academics/index.html
+++ b/academics/index.html
@@ -3,46 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - IT Department</title>
+  <title>Academics | IT Department - GECI</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- ========== NAVBAR ========== -->
   <header class="navbar">
-    <div class="logo"> 
-      <span class="logo-icon">IT</span> Information Technology 
+    <div class="logo">
+      <span class="logo-icon">IT</span> INFORMATION TECHNOLOGY
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li class="dropdown">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown active">
           <a href="#">Academics ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="curriculum.html">Curriculum</a></li>
-            <li><a href="timetable.html">Timetable</a></li>
-            <li><a href="faculty.html">Faculty Profiles</a></li>
-            <li><a href="labs.html">Labs</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#">Curriculum</a></li>
+            <li><a href="#">Timetable</a></li>
+            <li><a href="#">Faculty Profiles</a></li>
+            <li><a href="#">Labs</a></li>
+            <li><a href="#">Projects</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Research ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="research.html">Research Centers</a></li>
+            <li><a href="#">Publications</a></li>
+            <li><a href="#">Research Centers</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Student Life ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="placements.html">Placements</a></li>
-            <li><a href="internships.html">Internships</a></li>
+            <li><a href="#">Placements</a></li>
+            <li><a href="#">Internships</a></li>
           </ul>
         </li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a class="active" href="#">Contact Us</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
     <div class="nav-actions">
@@ -51,82 +51,86 @@
     </div>
   </header>
 
-  <!-- Contact Section -->
-  <section class="contact">
-    <h1>Connect With Us</h1>
-    <p>
-      We are here to help! Whether you have questions about our programs, research, or need support, 
-      feel free to reach out to the College Information Technology Department.
-    </p>
+  <!-- ========== MAIN CONTENT ========== -->
+  <main class="content">
+    <h1 class="page-title">Academics</h1>
 
-    <div class="contact-info">
-      <div class="info-card">
-        <h3>📍 Visit Our Office</h3>
-        <p>IT Department Building, University Campus, 123 Tech Drive, Cityville, State, 00000</p>
-        <a href="#">Get Directions →</a>
+    <!-- Academic Programs -->
+    <section class="section">
+      <h2 class="section-title">Academic Programs</h2>
+      <div class="card-grid">
+        <div class="card">
+          <h3>🎓 Undergraduate Programs</h3>
+          <p>Explore our diverse Bachelor's degree programs designed to equip students with foundational and advanced IT skills.</p>
+          <a href="#">Discover UG Programs →</a>
+        </div>
+        <div class="card">
+          <h3>📘 Postgraduate Programs</h3>
+          <p>Advance your expertise with specialized Master's programs focusing on cutting-edge IT domains.</p>
+          <a href="#">Explore PG Programs →</a>
+        </div>
       </div>
-      <div class="info-card">
-        <h3>✉️ Email Us</h3>
-        <p>For general inquiries, program information, or feedback.</p>
-        <a href="#">Send an Email →</a>
+    </section>
+
+    <!-- Course Structure -->
+    <section class="section">
+      <h2 class="section-title">Course Structure</h2>
+      <div class="card single">
+        <h3>📖 Curriculum Overview</h3>
+        <p>Detailed breakdown of core subjects, electives, and practical modules across all academic programs. Understand your learning path.</p>
+        <a href="#">View Full Curriculum →</a>
       </div>
-      <div class="info-card">
-        <h3>📞 Call Us</h3>
-        <p>Our team is available Monday to Friday, 9:00 AM - 5:00 PM</p>
-        <a href="tel:+11234567890">+1 (123) 456-7890 →</a>
+    </section>
+
+    <!-- Admission Process -->
+    <section class="section">
+      <h2 class="section-title">Admission Process</h2>
+      <div class="card single">
+        <h3>📝 How to Apply</h3>
+        <p>Comprehensive guide to application procedures, eligibility criteria, required documents, and important deadlines for all programs.</p>
+        <a href="#">Start Your Application →</a>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <!-- Contact Form -->
-  <section class="form-section">
-    <h2>Send Us a Message</h2>
-    <form>
-      <label>Your Name</label>
-      <input type="text" placeholder="John Doe">
-
-      <label>Your Email</label>
-      <input type="email" placeholder="you@example.com">
-
-      <label>Reason for Contact</label>
-      <select>
-        <option>Select a reason</option>
-        <option>Admissions</option>
-        <option>Research Collaboration</option>
-        <option>General Inquiry</option>
-      </select>
-
-      <label>Subject</label>
-      <input type="text" placeholder="Regarding my application...">
-
-      <label>Your Message</label>
-      <textarea placeholder="Please provide details about your inquiry..."></textarea>
-
-      <label>Attachments (Optional)</label>
-      <input type="file">
-
-      <button type="submit" class="btn">Send Message</button>
-    </form>
-  </section>
-
-  <!-- Location -->
-  <section class="location">
-    <h2>Our Location</h2>
-    <img src="https://images.unsplash.com/photo-1505852679233-d9fd70aff56d?w=1000" alt="Campus Map">
-  </section>
-
-  <!-- Footer -->
+  <!-- ========== FOOTER ========== -->
   <footer class="footer">
-    <div class="footer-links">
-      <a href="#">Academics</a>
-      <a href="#">Research</a>
-      <a href="#">Student Life</a>
-      <a href="#">Connect</a>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>Academics</h3>
+        <ul>
+          <li><a href="#">Curriculum</a></li>
+          <li><a href="#">Timetable</a></li>
+          <li><a href="#">Faculty Profiles</a></li>
+          <li><a href="#">Labs</a></li>
+          <li><a href="#">Projects</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Research</h3>
+        <ul>
+          <li><a href="#">Publications</a></li>
+          <li><a href="#">Research Centers</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Student Life</h3>
+        <ul>
+          <li><a href="#">Placements</a></li>
+          <li><a href="#">Internships</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>IT Department, GEC Idukki<br>Email: info@geci.ac.in<br>Phone: +91 12345 67890</p>
+      </div>
     </div>
-    <div class="socials">
-      🌐 📘 🐦 💼 🎥
+    <div class="footer-bottom">
+      <p>&copy; 2025 IT Department, GECI. All Rights Reserved.</p>
     </div>
-    <p>© 2024 IT Connect. All rights reserved.</p>
   </footer>
 
 </body>
