--- a/academics/index.html
+++ b/academics/index.html
@@ -45,10 +45,6 @@
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
-    <div class="nav-actions">
-      <input type="text" placeholder="Search the IT Department...">
-      <button class="login-btn">Login</button>
-    </div>
   </header>
 
   <!-- ========== MAIN CONTENT ========== -->
@@ -131,6 +127,10 @@
     <div class="footer-bottom">
       <p>&copy; 2025 IT Department, GECI. All Rights Reserved.</p>
     </div>
+  </footer>
+
+</body>
+</html>
   </footer>
 
 </body>
