--- a/home/home.html
+++ b/home/home.html
@@ -44,10 +44,6 @@
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
-    <div class="nav-actions">
-      <input type="text" placeholder="Search the IT Department...">
-      <button class="login-btn">Login</button>
-    </div>
   </header>
 
   <!-- ========== HERO ========== -->
@@ -197,6 +193,10 @@
 
     <div class="footer-bottom">
       <p>&copy; 2025 IT Department.All Rights Reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
     </div>
   </footer>
 </body>
