--- a/students life/index.html
+++ b/students life/index.html
@@ -9,46 +9,43 @@
 </head>
 <body>
   <!-- ========== NAVBAR ========== -->
-  <header class="navbar">
+   <header class="navbar">
     <div class="logo">
       <span class="logo-icon">IT</span> INFORMATION TECHNOLOGY
     </div>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li class="dropdown">
+        <li class="dropdown active">
           <a href="#">Academics ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="curriculum.html">Curriculum</a></li>
-            <li><a href="timetable.html">Timetable</a></li>
-            <li><a href="faculty.html">Faculty Profiles</a></li>
-            <li><a href="labs.html">Labs</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#">Curriculum</a></li>
+            <li><a href="#">Timetable</a></li>
+            <li><a href="#">Faculty Profiles</a></li>
+            <li><a href="#">Labs</a></li>
+            <li><a href="#">Projects</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Research ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="research.html">Research Centers</a></li>
+            <li><a href="#">Publications</a></li>
+            <li><a href="#">Research Centers</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#">Student Life ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="placements.html">Placements</a></li>
-            <li><a href="internships.html">Internships</a></li>
+            <li><a href="#">Placements</a></li>
+            <li><a href="#">Internships</a></li>
           </ul>
         </li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
-    <div class="nav-actions">
-      <input type="text" placeholder="Search the IT Department...">
-      <button class="login-btn">Login</button>
-    </div>
   </header>
+
 
   <!-- ========== STUDENT LIFE ========== -->
   <main class="page-content">
@@ -161,6 +158,10 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2025 IT Department, GECI. All Rights Reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
     </div>
   </footer>
 </body>
