--- a/home/home.html
+++ b/home/home.html
@@ -24,6 +24,7 @@
             <li><a href="#">Faculty Profiles</a></li>
             <li><a href="#">Labs</a></li>
             <li><a href="#">Projects</a></li>
+            <li><a href="#">Announcements</a></li>
           </ul>
         </li>
         <li class="dropdown">
