--- a/lab/lab.html
+++ b/lab/lab.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="lab.css">
 </head>
 <body>
-    <header class="navbar">
+    <!-- <header class="navbar">
         <div class="container nav-content">
             <div class="nav-brand"><span class="logo">InformationTechnology</span></div>
             <nav>
@@ -27,7 +27,55 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
+     <!-- Header -->
+  <header class="navbar">
+    <div class="logo">
+      <span class="logo-icon">IT</span> INFORMATION TECHNOLOGY
+    </div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="#">Academics </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Academics</a></li>
+            <li><a href="#">Curriculum</a></li>
+            <li><a href="#">Timetable</a></li>
+            <li><a href="#">Faculty Profiles</a></li>
+            <li><a href="#">Labs</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Announcements</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Research </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Publications</a></li>
+            <li><a href="#">Research Centers</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Student Life </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Student Life</a></li>
+            <li><a href="#">Placements</a></li>
+            <li><a href="#">Internships</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Resources</a></li>
+         <li class="dropdown">
+          <a href="#">Contact us</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Connect with us</a></li>
+      </ul>
+    </nav>
+  
+  </header>
+<!-- ...existing code... -->
 
     <main class="container main-content">
         <h1 class="labs-title">Labs</h1>
@@ -126,13 +174,60 @@
             </ul>
         </div>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-content">
             <span>Academics</span>
             <span>Research</span>
             <span>Student Life</span>
             <span>Connect</span>
         </div>
-    </footer>
+    </footer> -->
+    <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- About -->
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>Welcome to Our College – where innovation meets excellence. We strive to empower students through quality education, research, and holistic development.</p>
+      </div>
+
+      <!-- Academics -->
+      <div class="footer-section">
+        <h3>Academics</h3>
+        <ul>
+          <li><a href="curriculum.html">Curriculum</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
+          <li><a href="faculty.html">Faculty Profiles</a></li>
+          <li><a href="labs.html">Labs</a></li>
+          <li><a href="projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <!-- Research -->
+      <div class="footer-section">
+        <h3>Research</h3>
+        <ul>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="research.html">Research Centers</a></li>
+          <li><a href="collaborations.html">Collaborations</a></li>
+        </ul>
+      </div>
+
+      <!-- Student Life -->
+      <div class="footer-section">
+        <h3>Student Life</h3>
+        <ul>
+          <li><a href="placements.html">Placements</a></li>
+          <li><a href="internships.html">Internships</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="clubs.html">Clubs & Societies</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2025 IT Department.All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
