--- a/students life/index.html
+++ b/students life/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Life | IT Department</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ========== NAVBAR ========== -->
@@ -16,34 +16,44 @@
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li class="dropdown active">
-          <a href="#">Academics ▾</a>
+        <li class="dropdown">
+          <a href="#">Academics </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Academics</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Timetable</a></li>
             <li><a href="#">Faculty Profiles</a></li>
             <li><a href="#">Labs</a></li>
             <li><a href="#">Projects</a></li>
+            <li><a href="#">Announcements</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Research ▾</a>
+          <a href="#">Research </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Research</a></li>
             <li><a href="#">Publications</a></li>
             <li><a href="#">Research Centers</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Student Life ▾</a>
+          <a href="#">Student Life </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Student Life</a></li>
             <li><a href="#">Placements</a></li>
             <li><a href="#">Internships</a></li>
           </ul>
         </li>
         <li><a href="#">Resources</a></li>
-        <li><a href="#">Contact Us</a></li>
+         <li class="dropdown">
+          <a href="#">Contact us</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Connect with us</a></li>
       </ul>
     </nav>
+  
   </header>
 
 
@@ -124,40 +134,48 @@
   <!-- ========== FOOTER ========== -->
   <footer class="footer">
     <div class="footer-container">
+      <!-- About -->
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>Welcome to Our College – where innovation meets excellence. We strive to empower students through quality education, research, and holistic development.</p>
+      </div>
+
+      <!-- Academics -->
       <div class="footer-section">
         <h3>Academics</h3>
         <ul>
-          <li><a href="#">Curriculum</a></li>
-          <li><a href="#">Timetable</a></li>
-          <li><a href="#">Faculty Profiles</a></li>
-          <li><a href="#">Labs</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="curriculum.html">Curriculum</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
+          <li><a href="faculty.html">Faculty Profiles</a></li>
+          <li><a href="labs.html">Labs</a></li>
+          <li><a href="projects.html">Projects</a></li>
         </ul>
       </div>
 
+      <!-- Research -->
       <div class="footer-section">
         <h3>Research</h3>
         <ul>
-          <li><a href="#">Publications</a></li>
-          <li><a href="#">Research Centers</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="research.html">Research Centers</a></li>
+          <li><a href="collaborations.html">Collaborations</a></li>
         </ul>
       </div>
 
+      <!-- Student Life -->
       <div class="footer-section">
         <h3>Student Life</h3>
         <ul>
-          <li><a href="#">Placements</a></li>
-          <li><a href="#">Internships</a></li>
+          <li><a href="placements.html">Placements</a></li>
+          <li><a href="internships.html">Internships</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="clubs.html">Clubs & Societies</a></li>
         </ul>
       </div>
-
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <p>IT Department, GEC Idukki<br>Email: info@geci.ac.in<br>Phone: +91 12345 67890</p>
-      </div>
     </div>
+
     <div class="footer-bottom">
-      <p>&copy; 2025 IT Department, GECI. All Rights Reserved.</p>
+      <p>&copy; 2025 IT Department.All Rights Reserved.</p>
     </div>
   </footer>
 </body>
