--- a/home/home.html
+++ b/home/home.html
@@ -16,9 +16,10 @@
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li class="dropdown active">
-          <a href="#">Academics ▾</a>
+        <li class="dropdown">
+          <a href="#">Academics </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Academics</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Timetable</a></li>
             <li><a href="#">Faculty Profiles</a></li>
@@ -28,25 +29,32 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Research ▾</a>
+          <a href="#">Research </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Research</a></li>
             <li><a href="#">Publications</a></li>
             <li><a href="#">Research Centers</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Student Life ▾</a>
+          <a href="#">Student Life </a>
           <ul class="dropdown-menu">
+            <li><a href="#">Student Life</a></li>
             <li><a href="#">Placements</a></li>
             <li><a href="#">Internships</a></li>
           </ul>
         </li>
         <li><a href="#">Resources</a></li>
-        <li><a href="#">Contact Us</a></li>
+         <li class="dropdown">
+          <a href="#">Contact us</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Connect with us</a></li>
       </ul>
     </nav>
+  
   </header>
-
   <!-- ========== HERO ========== -->
   <section class="hero">
     <div class="hero-text">
