--- a/carriculam/curriculum.html
+++ b/carriculam/curriculum.html
@@ -74,7 +74,7 @@
          <li class="dropdown">
           <a href="#">Contact us</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Contact </a></li>
             <li><a href="#">FAQ's</a></li>
             <li><a href="#">Connect with us</a></li>
       </ul>
