--- a/internship/intership.html
+++ b/internship/intership.html
@@ -10,27 +10,51 @@
 </head>
 <body>
 
-  <!-- Header -->
   <header class="navbar">
-    <div class="logo">Information <span>Technology</span></div>
+    <div class="logo">
+      <span class="logo-icon">IT</span> INFORMATION TECHNOLOGY
+    </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="#"> Home</a></li>
-        <li><a href="#"> Academics</a></li>
-        <li><a href="#"> Research</a></li>
-        <li><a href="#"> Projects</a></li>
-        <li><a href="#">Labs</a></li>
-        <li><a href="#"> Faculty</a></li>
-        <li><a href="#"> Student Life</a></li>
-        <li><a href="#"> Resources</a></li>
-        <li><a href="#"> Publications</a></li>
-        <li><a href="#"> Contact Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="#">Academics </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Academics</a></li>
+            <li><a href="#">Curriculum</a></li>
+            <li><a href="#">Timetable</a></li>
+            <li><a href="#">Faculty Profiles</a></li>
+            <li><a href="#">Labs</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Announcements</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Research </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Publications</a></li>
+            <li><a href="#">Research Centers</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#">Student Life </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Student Life</a></li>
+            <li><a href="#">Placements</a></li>
+            <li><a href="#">Internships</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Resources</a></li>
+         <li class="dropdown">
+          <a href="#">Contact us</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ's</a></li>
+            <li><a href="#">Connect with us</a></li>
       </ul>
     </nav>
-    <div class="search-login">
-      <input type="text" placeholder="Search the IT Department...">
-      <button class="login-btn"><i class="fa-solid fa-right-to-bracket"></i> Login</button>
-    </div>
+  
   </header>
 
   <!-- Internship Opportunities -->
@@ -106,44 +130,54 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-left">
-        <h3><i class="fa-solid fa-network-wired"></i> Information Technology</h3>
-        <p>Your gateway to the College of IT.</p>
-        <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-        </div>
+    <div class="footer-container">
+      <!-- About -->
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>Welcome to Our College – where innovation meets excellence. We strive to empower students through quality education, research, and holistic development.</p>
       </div>
-      <div class="footer-links">
-        <div>
-          <h4>Academics</h4>
-          <a href="#">Programs</a>
-          <a href="#">Curriculum</a>
-          <a href="#">Timetable</a>
-        </div>
-        <div>
-          <h4>Research</h4>
-          <a href="#">Areas</a>
-          <a href="#">Projects</a>
-          <a href="#">Publications</a>
-        </div>
-        <div>
-          <h4>Student Life</h4>
-          <a href="#">Clubs</a>
-          <a href="#">Events</a>
-          <a href="#">Gallery</a>
-        </div>
-        <div>
-          <h4>Connect</h4>
-          <a href="#">Contact Us</a>
-          <a href="#">Support</a>
-        </div>
+
+      <!-- Academics -->
+      <div class="footer-section">
+        <h3>Academics</h3>
+        <ul>
+          <li><a href="curriculum.html">Curriculum</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
+          <li><a href="faculty.html">Faculty Profiles</a></li>
+          <li><a href="labs.html">Labs</a></li>
+          <li><a href="projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <!-- Research -->
+      <div class="footer-section">
+        <h3>Research</h3>
+        <ul>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="research.html">Research Centers</a></li>
+          <li><a href="collaborations.html">Collaborations</a></li>
+        </ul>
+      </div>
+
+      <!-- Student Life -->
+      <div class="footer-section">
+        <h3>Student Life</h3>
+        <ul>
+          <li><a href="placements.html">Placements</a></li>
+          <li><a href="internships.html">Internships</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="clubs.html">Clubs & Societies</a></li>
+        </ul>
       </div>
     </div>
-  </footer>
 
+    <div class="footer-bottom">
+      <p>&copy; 2025 IT Department.All Rights Reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
+    </div>
+  </footer>
 </body>
 </html>
