--- a/1.home/home.html
+++ b/1.home/home.html
@@ -15,17 +15,17 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li class="dropdown">
           <a href="#">Academics </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Academics</a></li>
-            <li><a href="#">Curriculum</a></li>
-            <li><a href="#">Timetable</a></li>
-            <li><a href="#">Faculty Profiles</a></li>
-            <li><a href="#">Labs</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Announcements</a></li>
+            <li><a href="../2.academics/academics.html">Academics</a></li>
+            <li><a href="../3.carriculam/curriculum.html">Curriculum</a></li>
+            <li><a href="../4.department time table/timetable.html">Timetable</a></li>
+            <li><a href="../10.faculty/faculty.html">Faculty Profiles</a></li>
+            <li><a href="../9lab/lab.html">Labs</a></li>
+            <li><a href="../8.projects/projects.html">Projects</a></li>
+            <li><a href="../16.announcement/ann.html">Announcements</a></li>
           </ul>
         </li>
         <li class="dropdown">
