--- a/1.home/home.html
+++ b/1.home/home.html
@@ -15,9 +15,9 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="../1.home/home.html">Home</a></li>
         <li class="dropdown">
-          <a href="#">Academics </a>
+          <a href="../2.academics/academics.html">Academics </a>
           <ul class="dropdown-menu">
             <li><a href="../2.academics/academics.html">Academics</a></li>
             <li><a href="../3.carriculam/curriculum.html">Curriculum</a></li>
@@ -29,28 +29,27 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Research </a>
+          <a href="../7.Research/research.html">Research </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Research</a></li>
-            <li><a href="#">Publications</a></li>
-            <li><a href="#">Research Centers</a></li>
+            <li><a href="../7.Research/research.html">Research</a></li>
+            <li><a href="../12.publication/publication.html">Publications</a></li>
+            <li><a href="../7.Research/research.html">Research Centers</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#">Student Life </a>
+          <a href="../11.students life/student-life.html">Student Life </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Student Life</a></li>
-            <li><a href="#">Placements</a></li>
-            <li><a href="#">Internships</a></li>
+            <li><a href="../11.students life/student-life.html">Student Life</a></li>
+            <li><a href="../15.placement/pla.html">Placements</a></li>
+            <li><a href="../14.internship/intership.html">Internships</a></li>
           </ul>
         </li>
-        <li><a href="#">Resources</a></li>
+       
          <li class="dropdown">
-          <a href="#">Contact us</a>
+          <a href="../17.FAQ's/support.html">Contact us</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">FAQ's</a></li>
-            <li><a href="#">Connect with us</a></li>
+            <li><a href="../17.FAQ's/support.html">FAQ's</a></li>
+            <li><a href="../18.connect/connect.html">Connect with us</a></li>
       </ul>
     </nav>
   
