--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="dropdown">
           <a href="../2.academics/academics.html">Academics </a>
           <ul class="dropdown-menu">
-            <li><a href="../2.academics/academics.html">Academics</a></li>
+            <li><a href="2.academics/index.html">Academics</a></li>
             <li><a href="../3.carriculam/curriculum.html">Curriculum</a></li>
             <li><a href="../4.department time table/timetable.html">Timetable</a></li>
             <li><a href="../10.faculty/faculty.html">Faculty Profiles</a></li>
