--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="../2.academics/academics.html">Academics </a>
           <ul class="dropdown-menu">
             <li><a href="2.academics/index.html">Academics</a></li>
-            <li><a href="../3.carriculam/curriculum.html">Curriculum</a></li>
+            <li><a href="3.carriculam/curriculum.html">Curriculum</a></li>
             <li><a href="../4.department time table/timetable.html">Timetable</a></li>
             <li><a href="../10.faculty/faculty.html">Faculty Profiles</a></li>
             <li><a href="../9lab/lab.html">Labs</a></li>
