--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-links">
         <li><a href="../1.home/home.html">Home</a></li>
         <li class="dropdown">
-          <a href="../2.academics/academics.html">Academics </a>
+          <a href="2.academics/index.html">Academics </a>
           <ul class="dropdown-menu">
             <li><a href="2.academics/index.html">Academics</a></li>
             <li><a href="3.carriculam/curriculum.html">Curriculum</a></li>
