connect us footer edit

--- a/18.connect/connect.html
+++ b/18.connect/connect.html
@@ -120,23 +120,58 @@
     <img src="https://images.unsplash.com/photo-1505852679233-d9fd70aff56d?w=1000" alt="Campus Map">
   </section>
 
-  <!-- Footer -->
+  <!-- ========== FOOTER ========== -->
   <footer class="footer">
-    <div class="footer-links">
-      <a href="#">Academics</a>
-      <a href="#">Research</a>
-      <a href="#">Student Life</a>
-      <a href="#">Connect</a>
-    </div>
-    <div class="socials">
-      🌐 📘 🐦 💼 🎥
-    </div>
-    <p>© 2024 IT Connect. All rights reserved.</p>
-  </footer>
+    <div class="footer-container">
+      <!-- About -->
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>Welcome to Our College – where innovation meets excellence. We strive to empower students through quality education, research, and holistic development.</p>
+      </div>
 
+      <!-- Academics -->
+      <div class="footer-section">
+        <h3>Academics</h3>
+        <ul>
+          <li><a href="curriculum.html">Curriculum</a></li>
+          <li><a href="timetable.html">Timetable</a></li>
+          <li><a href="faculty.html">Faculty Profiles</a></li>
+          <li><a href="labs.html">Labs</a></li>
+          <li><a href="projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <!-- Research -->
+      <div class="footer-section">
+        <h3>Research</h3>
+        <ul>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="research.html">Research Centers</a></li>
+          <li><a href="collaborations.html">Collaborations</a></li>
+        </ul>
+      </div>
+
+      <!-- Student Life -->
+      <div class="footer-section">
+        <h3>Student Life</h3>
+        <ul>
+          <li><a href="placements.html">Placements</a></li>
+          <li><a href="internships.html">Internships</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="clubs.html">Clubs & Societies</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>&copy; 2025 IT Department.All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
+    </div>
   </footer>
+
 
 </body>
 </html>
