--- a/10.faculty/faculty.html
+++ b/10.faculty/faculty.html
@@ -64,7 +64,7 @@
       <!-- Faculty Card -->
       <div class="faculty-card">
         <img src="m1.jpg" alt="Dr. Alistair Finch">
-        <h3>Dr. Alistair Finch</h3>
+        <h3>Dr. Abhishek</h3>
         <p class="designation">Head of Department, Professor</p>
         <p><strong>Expertise:</strong> Artificial Intelligence, Machine Learning, Data Ethics</p>
         <div class="links">
@@ -74,7 +74,7 @@
 
       <div class="faculty-card">
         <img src="g1.jpg" alt="Prof. Evelyn Reed">
-        <h3>Prof. Evelyn Reed</h3>
+        <h3>Prof. Ashnitha</h3>
         <p class="designation">Associate Professor</p>
         <p><strong>Expertise:</strong> Cybersecurity, Network Security, Cryptography</p>
         <div class="links">
@@ -84,7 +84,7 @@
 
       <div class="faculty-card">
         <img src="m2.jpg" alt="Dr. Liam Kincaid">
-        <h3>Dr. Liam Kincaid</h3>
+        <h3>Dr. Akhilraj</h3>
         <p class="designation">Assistant Professor</p>
         <p><strong>Expertise:</strong> Software Engineering, Cloud Computing, DevOps</p>
         <div class="links">
@@ -94,7 +94,7 @@
 
       <div class="faculty-card">
         <img src="g2.jpg" alt="Dr. Sofia Navarro">
-        <h3>Dr. Sofia Navarro</h3>
+        <h3>Dr. Alfiya</h3>
         <p class="designation">Senior Lecturer</p>
         <p><strong>Expertise:</strong> Database Systems, Big Data Analytics, Information Retrieval</p>
         <div class="links">
@@ -104,7 +104,7 @@
 
       <div class="faculty-card">
         <img src="m3.jpg" alt="Prof. Ethan Thorne">
-        <h3>Prof. Ethan Thorne</h3>
+        <h3>Prof. Vijayan</h3>
         <p class="designation">Professor</p>
         <p><strong>Expertise:</strong> Human-Computer Interaction, UI/UX Design, Virtual Reality</p>
         <div class="links">
@@ -114,7 +114,7 @@
 
       <div class="faculty-card">
         <img src="g3.jpg" alt="Ms. Chloe Vance">
-        <h3>Ms. Chloe Vance</h3>
+        <h3>Ms. Parvathy</h3>
         <p class="designation">Lecturer</p>
         <p><strong>Expertise:</strong> Web Development, Front-end Technologies, Full-stack Architecture</p>
         <div class="links">
@@ -124,7 +124,7 @@
 
       <div class="faculty-card">
         <img src="m4.jpg" alt="Dr. Marcus Bell">
-        <h3>Dr. Marcus Bell</h3>
+        <h3>Dr. Manu</h3>
         <p class="designation">Associate Professor</p>
         <p><strong>Expertise:</strong> Operating Systems, Distributed Systems, High-Performance Computing</p>
         <div class="links">
@@ -134,7 +134,7 @@
 
       <div class="faculty-card">
         <img src="g4.jpg" alt="Dr. Zara Khan">
-        <h3>Dr. Zara Khan</h3>
+        <h3>Dr. Zara Mary Kurian</h3>
         <p class="designation">Assistant Professor</p>
         <p><strong>Expertise:</strong> Robotics, Computer Vision, Embedded Systems</p>
         <div class="links">
