--- a/12.publication/publication.html
+++ b/12.publication/publication.html
@@ -65,21 +65,21 @@
         <div class="card">
           <img src="ai powered.avif" alt="ai powered cybersecurity">
           <h3>Advancements in AI-Powered Cybersecurity Threats Detection</h3>
-          <p>By Dr. Jane Doe, Prof. John Smith<br>Journal of Computer Security, 2023</p>
+          <p>By Dr. Arun Kumar<br>Journal of Computer Security, 2023</p>
           <a href="#">View Publication →</a>
         </div>
 
         <div class="card">
           <img src="cloud computing.webp" alt="cloud computing">
           <h3>Optimizing Cloud Resource Allocation with Machine</h3>
-          <p>By Dr. Alex Chen<br>International Conference on Cloud</p>
+          <p>By Dr. Alen Xavier<br>International Conference on Cloud</p>
           <a href="#">View Publication →</a>
         </div>
 
         <div class="card">
           <img src="blockchain.jpg" alt="blockchain technology">
           <h3>Blockchain for Secure Supply Chain Management</h3>
-          <p>By Prof. Emily White, Dr. Mark Green<br>IEEE Transactions on Blockchain, 2023</p>
+          <p>By Prof. Santhosh George<br>IEEE Transactions on Blockchain, 2023</p>
           <a href="#">View Publication →</a>
         </div>
       </div>
@@ -99,14 +99,14 @@
         <div class="card">
           <img src="Metaverse.jpg" alt="">
           <h3>Understanding the Metaverse: Opportunities for IT Students</h3>
-          <p>By Dr. Alice Brown | October 28, 2023</p>
+          <p>By Dr. Mohanlal | October 28, 2023</p>
           <a href="#">Read More →</a>
         </div>
 
         <div class="card">
           <img src="Data-Security.jpg" alt="">
           <h3>Cybersecurity Best Practices for Remote Work</h3>
-          <p>By Prof. John Smith | September 10, 2023</p>
+          <p>By Prof. Krishna Kumar | September 10, 2023</p>
           <a href="#">Read More →</a>
         </div>
       </div>
