--- a/15.placement/pla.html
+++ b/15.placement/pla.html
@@ -130,7 +130,7 @@
         </div>
         <div class="stat-card">
             <i class="fa fa-dollar-sign"></i>
-            <span class="stat-value">$75K</span>
+            <span class="stat-value">75K</span>
             <span class="stat-label">Average Salary</span>
             <p class="stat-description">Average annual salary for graduates.</p>
         </div>
@@ -162,35 +162,35 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Aisha Khan</td>
+                    <td>Aisha Mehr</td>
                     <td>TechSolutions Inc.</td>
                     <td>Software Engineer</td>
-                    <td>2023</td>
+                    <td>2024</td>
                     <td><a href="#">View Details <i class="fa fa-eye"></i></a></td>
                 </tr>
                 <tr>
-                    <td>Ben Carter</td>
+                    <td>Benny John</td>
                     <td>Innovate AI</td>
                     <td>AI/ML Developer</td>
                     <td>2023</td>
                     <td><a href="#">View Details <i class="fa fa-eye"></i></a></td>
                 </tr>
                 <tr>
-                    <td>Chloe Lee</td>
+                    <td>Aswathy V A</td>
                     <td>CyberGuard Security</td>
                     <td>Security Analyst</td>
                     <td>2022</td>
                     <td><a href="#">View Details <i class="fa fa-eye"></i></a></td>
                 </tr>
                 <tr>
-                    <td>David Green</td>
+                    <td>Niveda S</td>
                     <td>Global Data Corp.</td>
                     <td>Data Scientist</td>
                     <td>2022</td>
                     <td><a href="#">View Details <i class="fa fa-eye"></i></a></td>
                 </tr>
                 <tr>
-                    <td>Eva Rodriguez</td>
+                    <td>Albin </td>
                     <td>CloudWorks Ltd.</td>
                     <td>Cloud Architect</td>
                     <td>2021</td>
