--- a/18.connect/connect.html
+++ b/18.connect/connect.html
@@ -67,13 +67,14 @@
     <div class="contact-info">
       <div class="info-card">
         <h3>📍 Visit Our Office</h3>
-        <p>IT Department Building, University Campus, 123 Tech Drive, Cityville, State, 00000</p>
+        <p>IT Department Building,Government Engineering College,Painavu, Idukki,Kerala - 685603, India.</p>
         <a href="#">Get Directions →</a>
       </div>
       <div class="info-card">
         <h3>✉️ Email Us</h3>
         <p>For general inquiries, program information, or feedback.</p>
-        <a href="#">Send an Email →</a>
+        <p>Send an Email→</p>
+        <a href="#">infotech@gecidukki.ac.in</a>
       </div>
       <div class="info-card">
         <h3>📞 Call Us</h3>
