--- a/3.carriculam/curriculum.html
+++ b/3.carriculam/curriculum.html
@@ -63,7 +63,7 @@
     <section class="overview">
       <h2>Curriculum Overview</h2>
       <p>
-        The Information Technology Department offers a dynamic and comprehensive curriculum designed to prepare students for the challenges and opportunities of the digital age. Our programs emphasize a strong foundation in core IT principles, coupled with practical application, critical thinking, and cutting-edge research methodologies. We aim to foster innovation, ethical practices, and leadership skills crucial for success in the rapidly evolving technology landscape.
+        Department of Information Technology at Government Engineering College, ldukki was established in the academic year 2000. The faculties of our department are well qualified and have rich knowledge in their subjects. Highly committed faculty members are keen on encouraging students to involve in various co-curricular and extra-curricular activities along with their academics. Also the department has a highly advanced infrastructure including high speed internet facilities, class rooms equipped with LCD projectors and digital podiums. The department labs are equipped with state of art of learning tools, advanced computing infrastructure with world class software environment and development tools which satisfy the bench mark in high end IT education. It also conducts short-term training program for both the staff and students for updating them with the latest technological trends.
       </p>
     </section>
 
