--- a/1.home/home.html
+++ b/1.home/home.html
@@ -78,17 +78,16 @@
     <div class="card">
       <h3>VISION</h3>
       <p>
-        “To be a centre of excellence in the field of Information Technology which nurtures young minds 
-        through technological adaptation, research, innovation and entrepreneurial skills complying 
-        to the needs of society and industry”
+         “To be a centre of excellence in the field of InformationTechnology which nurtures young minds through technological adaptation, research, innovation and entrepreneurial skills complying to the needs of society and industry.”
+
       </p>
     </div>
     <div class="card">
       <h3>MISSION</h3>
-      <ol>
-        <li>Imparting career oriented professional education to students through effective delivery of the curriculum.</li>
+      <ol type="01">
+        <li> Imparting career oriented professional education to students through effective delivery of the curriculum.</li>
         <li>Establishing effective adaptation of cutting edge technologies through industry collaborations and mentoring.</li>
-        <li>Empowering individuals to be socially responsible by inculcating critical thinking, innovation and ethical values.</li>
+        <li>Empowering individuals to be socially responsible by inculcating  critical thinking, innovation and ethical values.</li>
       </ol>
     </div>
   </section>
