add image to connect

--- a/18.connect/connect.html
+++ b/18.connect/connect.html
@@ -118,7 +118,7 @@
   <!-- Location -->
   <section class="location">
     <h2>Our Location</h2>
-    <img src="https://images.unsplash.com/photo-1505852679233-d9fd70aff56d?w=1000" alt="Campus Map">
+    <img src="itdep.jpg" alt="Campus Map">
   </section>
 
   <!-- ========== FOOTER ========== -->
